--- a/challanges/js-tutorial-challanges/index.html
+++ b/challanges/js-tutorial-challanges/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1>Challenges</h1>
-    <script src="./challenges/10-data.js"></script>
-    <script src="./challenges/09-array-methods.js"></script>
+    <script src="./challenges/01-vars.js"></script>
   </body>
 </html>
