--- a/challanges/js-tutorial-challanges/index.html
+++ b/challanges/js-tutorial-challanges/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Challenges</h1>
-    <script src="./challenges/02-concat.js"></script>
+    <script src="./challenges/03-numbers.js"></script>
   </body>
 </html>
